5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4130/executions/1585_2895.log
== TEST (2019-03-21 11:34:20) 
-- CODE:
nA = float(input("Quantidade de jogos a serem encomendados"))
nB = float(input("Valor unitário dos jogos"))

frete = 35.00

valor = (nA * nB) + frete

print(valor)
-- OUTPUT:
575.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:34:32) 
-- CODE:
nA = float(input("Quantidade de jogos a serem encomendados"))
nB = float(input("Valor unitário dos jogos"))

frete = 35.00

valor = (nA * nB) + frete

print(valor)
-- OUTPUT:
575.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:34:40) 
-- CODE:
nA = float(input("Quantidade de jogos a serem encomendados"))
nB = float(input("Valor unitário dos jogos"))

frete = 35.00

valor = (nA * nB) + frete

print(valor)
-- OUTPUT:
575.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:35:01) 
-- CODE:
nA = float(input("Quantidade de jogos a serem encomendados"))
nB = float(input("Valor unitário de cada jogo"))

frete = 35.00

valor = (nA * nB) + frete

print(valor)
-- OUTPUT:
575.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:35:28) 
-- CODE:
nA = float(input("Quantidade de jogos a serem encomendados"))
nB = float(input("Valor unitário de cada jogo"))

frete = 35.00

valor = (nA * nB) + frete

print(valor)
-- OUTPUT:
575.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:36:17) 
-- CODE:
nA = float(input("Quantidade de jogos a serem encomendados"))

valor de cada jogo = 40.00
frete = 35.00

valor = (nA * 40.00) + frete

print(valor)
-- ERROR:
File "XXXX", line 3
    valor de cada jogo = 40.00
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:36:22) 
-- CODE:
nA = float(input("Quantidade de jogos a serem encomendados"))

valor de cada jogo = 40.00
frete = 35.00

valor = (nA * 40.00) + frete

print(valor)
-- ERROR:
File "XXXX", line 3
    valor de cada jogo = 40.00
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:36:32) 
-- CODE:
nA = float(input("Quantidade de jogos a serem encomendados"))

valor = 40.00
frete = 35.00

valor = (nA * 40.00) + frete

print(valor)
-- OUTPUT:
515.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:36:46) 
-- CODE:
nA = float(input("Quantidade de jogos a serem encomendados"))

preco = 40.00
frete = 35.00

valor = (nA * 40.00) + frete

print(valor)
-- OUTPUT:
515.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:36:51) 
-- CODE:
nA = float(input("Quantidade de jogos a serem encomendados"))

preco = 40.00
frete = 35.00

valor = (nA * 40.00) + frete

print(valor)
-- EXECUTION TIME:
0.182905
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
515.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
435.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
9875.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:36:55) 
-- CODE:
nA = float(input("Quantidade de jogos a serem encomendados"))

preco = 40.00
frete = 35.00

valor = (nA * 40.00) + frete

print(valor)
-- OUTPUT:
515.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:50:52) 
-- CODE:
nA = float(input("Quantidade de jogos a serem encomendados"))
nB = float(input("Valor de cada jogo"))
nC = float(input("Valor do frete"))

valor = ((nA * nB) + nC)

print(valor)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:51:02) 
-- CODE:
nA = float(input("Quantidade de jogos a serem encomendados"))
nB = float(input("Valor de cada jogo"))
nC = float(input("Valor do frete"))

valor = ((nA * nB) + nC)

print(valor)
-- EXECUTION TIME:
0.135801
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
